yacc/scope_yacc/parser.output
Terminals unused in grammar

   INLINE
   RESTRICT
   _BOOL
   _COMPLEX
   _IMAGINARY
   _ALIGNAS
   _ALIGNOF
   _ATOMIC
   _STATIC_ASSERT
   _NORETURN
   _THREAD_LOCAL
   _GENERIC


Rules useless in parser due to conflicts

  216 const_type: STRING


State 22 conflicts: 31 reduce/reduce
State 27 conflicts: 20 shift/reduce
State 28 conflicts: 20 shift/reduce
State 29 conflicts: 21 shift/reduce
State 30 conflicts: 20 shift/reduce
State 35 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 50 conflicts: 20 shift/reduce
State 54 conflicts: 2 shift/reduce
State 57 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 79 conflicts: 15 shift/reduce
State 80 conflicts: 15 shift/reduce
State 113 conflicts: 2 reduce/reduce
State 133 conflicts: 33 reduce/reduce
State 150 conflicts: 5 reduce/reduce
State 206 conflicts: 4 reduce/reduce
State 343 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_decl
    2                 | translation_unit external_decl

    3 external_decl: function_definition
    4              | decl

    5 function_definition: decl_specs declarator decl_list compound_stat
    6                    | declarator decl_list compound_stat
    7                    | decl_specs declarator compound_stat
    8                    | decl_specs declarator
    9                    | declarator compound_stat

   10 decl: decl_specs init_declarator_list SEMI
   11     | decl_specs SEMI

   12 decl_list: decl
   13          | decl_list decl

   14 decl_specs: storage_class_spec decl_specs
   15           | storage_class_spec
   16           | type_spec decl_specs
   17           | type_spec direct_declarator
   18           | type_spec
   19           | type_qualifier decl_specs
   20           | type_qualifier

   21 storage_class_spec: AUTO
   22                   | REGISTER
   23                   | STATIC
   24                   | EXTERN
   25                   | TYPEDEF

   26 type_spec: VOID
   27          | CHAR
   28          | SHORT
   29          | INT
   30          | LONG
   31          | FLOAT
   32          | DOUBLE
   33          | SIGNED
   34          | UNSIGNED
   35          | struct_or_union_spec
   36          | enum_spec
   37          | typedef_name

   38 type_qualifier: CONST
   39               | VOLATILE

   40 struct_or_union_spec: struct_or_union IDENTITY BRACE_L struct_decl_list BRACE_R
   41                     | struct_or_union BRACE_L struct_decl_list BRACE_R
   42                     | struct_or_union IDENTITY

   43 struct_or_union: STRUCT
   44                | UNION

   45 struct_decl_list: struct_decl
   46                 | struct_decl_list struct_decl

   47 init_declarator_list: init_declarator
   48                     | init_declarator_list COMMA init_declarator

   49 init_declarator: declarator
   50                | declarator ASSIGN initializer

   51 struct_decl: spec_qualifier_list struct_declarator_list SEMI

   52 spec_qualifier_list: type_spec spec_qualifier_list
   53                    | type_spec
   54                    | type_qualifier spec_qualifier_list
   55                    | type_qualifier

   56 struct_declarator_list: struct_declarator
   57                       | struct_declarator_list COMMA struct_declarator

   58 struct_declarator: declarator
   59                  | declarator COLON const_exp
   60                  | COLON const_exp

   61 enum_spec: ENUM IDENTITY BRACE_L enumerator_list BRACE_R
   62          | ENUM BRACE_L enumerator_list BRACE_R
   63          | ENUM IDENTITY

   64 enumerator_list: enumerator
   65                | enumerator_list COMMA enumerator

   66 enumerator: IDENTITY
   67           | IDENTITY ASSIGN const_exp

   68 declarator: pointer direct_declarator
   69           | direct_declarator
   70           | decl_specs

   71 direct_declarator: IDENTITY
   72                  | PARENTHESE_L declarator PARENTHESE_R
   73                  | direct_declarator BRACKET_L const_exp BRACKET_R
   74                  | direct_declarator BRACKET_L BRACKET_R
   75                  | direct_declarator PARENTHESE_L param_type_list PARENTHESE_R
   76                  | direct_declarator PARENTHESE_L id_list PARENTHESE_R
   77                  | direct_declarator PARENTHESE_L PARENTHESE_R

   78 pointer: MUL type_qualifier_list
   79        | MUL
   80        | MUL type_qualifier_list pointer
   81        | MUL pointer

   82 type_qualifier_list: type_qualifier
   83                    | type_qualifier_list type_qualifier

   84 param_type_list: param_list
   85                | param_list COMMA ELLIPSIS

   86 param_list: param_decl
   87           | param_list COMMA param_decl

   88 param_decl: decl_specs declarator
   89           | decl_specs abstract_declarator
   90           | decl_specs

   91 id_list: IDENTITY
   92        | id_list COMMA IDENTITY

   93 initializer: assignment_exp
   94            | BRACE_L initializer_list BRACE_R
   95            | BRACE_L initializer_list COMMA BRACE_R

   96 initializer_list: initializer
   97                 | initializer_list COMMA initializer

   98 type_name: spec_qualifier_list abstract_declarator
   99          | spec_qualifier_list

  100 abstract_declarator: pointer
  101                    | pointer direct_abstract_declarator
  102                    | direct_abstract_declarator

  103 direct_abstract_declarator: PARENTHESE_L abstract_declarator PARENTHESE_R
  104                           | direct_abstract_declarator BRACKET_L const_exp BRACKET_R
  105                           | BRACKET_L const_exp BRACKET_R
  106                           | direct_abstract_declarator BRACKET_L BRACKET_R
  107                           | BRACKET_L BRACKET_R
  108                           | direct_abstract_declarator BRACE_L param_type_list BRACE_R
  109                           | BRACE_L param_type_list BRACE_R
  110                           | direct_abstract_declarator BRACE_L BRACE_R
  111                           | BRACE_L BRACE_R

  112 typedef_name: IDENTITY

  113 stat: labeled_stat
  114     | exp_stat
  115     | compound_stat
  116     | selection_stat
  117     | iteration_stat
  118     | jump_stat

  119 labeled_stat: IDENTITY COLON stat
  120             | CASE const_exp COLON stat
  121             | DEFAULT COLON stat

  122 exp_stat: COLON SEMI
  123         | SEMI

  124 compound_stat: BRACE_L decl_list stat_list BRACE_R
  125              | BRACE_L stat_list BRACE_R
  126              | BRACE_L decl_list BRACE_R
  127              | BRACE_L BRACE_R

  128 stat_list: stat
  129          | stat_list stat

  130 selection_stat: IF PARENTHESE_L exp PARENTHESE_R stat
  131               | IF PARENTHESE_L exp PARENTHESE_R stat ELSE stat
  132               | SWITCH PARENTHESE_L exp PARENTHESE_R stat

  133 iteration_stat: WHILE PARENTHESE_L exp PARENTHESE_R stat
  134               | DO stat WHILE PARENTHESE_L exp PARENTHESE_R SEMI
  135               | FOR PARENTHESE_L exp SEMI exp SEMI exp PARENTHESE_R stat
  136               | FOR PARENTHESE_L exp SEMI exp SEMI PARENTHESE_R stat
  137               | FOR PARENTHESE_L exp SEMI SEMI exp PARENTHESE_R stat
  138               | FOR PARENTHESE_L exp SEMI SEMI PARENTHESE_R stat
  139               | FOR PARENTHESE_L SEMI exp SEMI exp PARENTHESE_R stat
  140               | FOR PARENTHESE_L SEMI exp SEMI PARENTHESE_R stat
  141               | FOR PARENTHESE_L SEMI SEMI exp PARENTHESE_R stat
  142               | FOR PARENTHESE_L SEMI SEMI PARENTHESE_R stat

  143 jump_stat: GOTO IDENTITY SEMI
  144          | CONTINUE SEMI
  145          | BREAK SEMI
  146          | RETURN exp SEMI
  147          | RETURN SEMI

  148 exp: assignment_exp
  149    | exp COMMA assignment_exp

  150 assignment_exp: conditional_exp
  151               | unary_exp assignment_operator assignment_exp

  152 assignment_operator: ASSIGN
  153                    | ASSIGN_OP

  154 conditional_exp: logical_or_exp
  155                | logical_or_exp QUES exp COLON

  156 const_exp: conditional_exp
  157          | primary_exp

  158 logical_or_exp: logical_and_exp
  159               | logical_or_exp OR logical_and_exp

  160 logical_and_exp: inclusive_or_exp
  161                | logical_and_exp AND inclusive_or_exp

  162 inclusive_or_exp: exclusive_or_exp
  163                 | inclusive_or_exp OR_OP exclusive_or_exp

  164 exclusive_or_exp: and_exp
  165                 | exclusive_or_exp XOR_OP and_exp

  166 and_exp: equality_exp
  167        | and_exp AND_OP equality_exp

  168 equality_exp: relational_exp
  169             | equality_exp EQUAL relational_exp
  170             | equality_exp NOT_EQUAL relational_exp

  171 relational_exp: shift_expression
  172               | relational_exp LESSER shift_expression
  173               | relational_exp GREATER shift_expression
  174               | relational_exp LEQUAL shift_expression
  175               | relational_exp GEQUAL shift_expression

  176 shift_expression: additive_exp
  177                 | shift_expression MOVE_L additive_exp
  178                 | shift_expression MOVE_R additive_exp

  179 additive_exp: mult_exp
  180             | additive_exp ADD mult_exp
  181             | additive_exp SUB mult_exp

  182 mult_exp: cast_exp
  183         | mult_exp MUL cast_exp
  184         | mult_exp DIV cast_exp
  185         | mult_exp MOD cast_exp

  186 cast_exp: unary_exp
  187         | PARENTHESE_L type_name PARENTHESE_R cast_exp

  188 unary_exp: postfix_exp
  189          | POST_ADD unary_exp
  190          | POST_SUB unary_exp
  191          | unary_operator cast_exp
  192          | SIZEOF unary_exp
  193          | SIZEOF PARENTHESE_L type_name PARENTHESE_R

  194 unary_operator: AND_OP
  195               | MUL
  196               | ADD
  197               | SUB
  198               | NEG
  199               | NOT

  200 postfix_exp: primary_exp
  201            | postfix_exp BRACKET_L exp BRACKET_R
  202            | postfix_exp PARENTHESE_L argument_exp_list PARENTHESE_R
  203            | postfix_exp PARENTHESE_L PARENTHESE_R
  204            | postfix_exp DOT IDENTITY
  205            | postfix_exp PELEMENT IDENTITY
  206            | postfix_exp POST_ADD
  207            | postfix_exp POST_SUB

  208 primary_exp: IDENTITY
  209            | const_type
  210            | STRING
  211            | PARENTHESE_L exp PARENTHESE_R

  212 argument_exp_list: assignment_exp
  213                  | argument_exp_list COMMA assignment_exp

  214 const_type: INT_NUM
  215           | FLOAT_NUM
  216           | STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 21
BREAK (259) 145
CASE (260) 120
CHAR (261) 27
COLON (262) 59 60 119 120 121 122 155
CONST (263) 38
CONTINUE (264) 144
DEFAULT (265) 121
DO (266) 134
DOUBLE (267) 32
ELLIPSIS (268) 85
ELSE (269) 131
ENUM (270) 61 62 63
EXTERN (271) 24
FLOAT (272) 31
FOR (273) 135 136 137 138 139 140 141 142
GOTO (274) 143
IF (275) 130 131
INT (276) 29
LONG (277) 30
REGISTER (278) 22
RETURN (279) 146 147
SHORT (280) 28
SIGNED (281) 33
SIZEOF (282) 192 193
STATIC (283) 23
STRUCT (284) 43
SWITCH (285) 132
TYPEDEF (286) 25
UNION (287) 44
UNSIGNED (288) 34
VOID (289) 26
VOLATILE (290) 39
WHILE (291) 133 134
INLINE (292)
RESTRICT (293)
_BOOL (294)
_COMPLEX (295)
_IMAGINARY (296)
_ALIGNAS (297)
_ALIGNOF (298)
_ATOMIC (299)
_STATIC_ASSERT (300)
_NORETURN (301)
_THREAD_LOCAL (302)
_GENERIC (303)
ADD (304) 180 196
SUB (305) 181 197
MUL (306) 78 79 80 81 183 195
DIV (307) 184
MOD (308) 185
NEG (309) 198
COMMA (310) 48 57 65 85 87 92 95 97 149 213
DOT (311) 204
SEMI (312) 10 11 51 122 123 134 135 136 137 138 139 140 141 142 143
    144 145 146 147
PARENTHESE_L (313) 72 75 76 77 103 130 131 132 133 134 135 136 137
    138 139 140 141 142 187 193 202 203 211
PARENTHESE_R (314) 72 75 76 77 103 130 131 132 133 134 135 136 137
    138 139 140 141 142 187 193 202 203 211
PELEMENT (315) 205
POST_ADD (316) 189 206
POST_SUB (317) 190 207
BRACKET_L (318) 73 74 104 105 106 107 201
BRACKET_R (319) 73 74 104 105 106 107 201
BRACE_L (320) 40 41 61 62 94 95 108 109 110 111 124 125 126 127
BRACE_R (321) 40 41 61 62 94 95 108 109 110 111 124 125 126 127
AND (322) 161
AND_OP (323) 167 194
OR (324) 159
OR_OP (325) 163
XOR_OP (326) 165
NOT (327) 199
EQUAL (328) 169
MOVE_L (329) 177
MOVE_R (330) 178
LESSER (331) 172
GREATER (332) 173
NOT_EQUAL (333) 170
LEQUAL (334) 174
GEQUAL (335) 175
ASSIGN_OP (336) 153
ASSIGN (337) 50 67 152
QUES (338) 155
IDENTITY (339) 40 42 61 63 66 67 71 91 92 112 119 143 204 205 208
INT_NUM (340) 214
FLOAT_NUM (341) 215
STRING (342) 210 216


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
translation_unit (89)
    on left: 1 2, on right: 0 2
external_decl (90)
    on left: 3 4, on right: 1 2
function_definition (91)
    on left: 5 6 7 8 9, on right: 3
decl (92)
    on left: 10 11, on right: 4 12 13
decl_list (93)
    on left: 12 13, on right: 5 6 13 124 126
decl_specs (94)
    on left: 14 15 16 17 18 19 20, on right: 5 7 8 10 11 14 16 19 70
    88 89 90
storage_class_spec (95)
    on left: 21 22 23 24 25, on right: 14 15
type_spec (96)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37, on right: 16 17 18
    52 53
type_qualifier (97)
    on left: 38 39, on right: 19 20 54 55 82 83
struct_or_union_spec (98)
    on left: 40 41 42, on right: 35
struct_or_union (99)
    on left: 43 44, on right: 40 41 42
struct_decl_list (100)
    on left: 45 46, on right: 40 41 46
init_declarator_list (101)
    on left: 47 48, on right: 10 48
init_declarator (102)
    on left: 49 50, on right: 47 48
struct_decl (103)
    on left: 51, on right: 45 46
spec_qualifier_list (104)
    on left: 52 53 54 55, on right: 51 52 54 98 99
struct_declarator_list (105)
    on left: 56 57, on right: 51 57
struct_declarator (106)
    on left: 58 59 60, on right: 56 57
enum_spec (107)
    on left: 61 62 63, on right: 36
enumerator_list (108)
    on left: 64 65, on right: 61 62 65
enumerator (109)
    on left: 66 67, on right: 64 65
declarator (110)
    on left: 68 69 70, on right: 5 6 7 8 9 49 50 58 59 72 88
direct_declarator (111)
    on left: 71 72 73 74 75 76 77, on right: 17 68 69 73 74 75 76 77
pointer (112)
    on left: 78 79 80 81, on right: 68 80 81 100 101
type_qualifier_list (113)
    on left: 82 83, on right: 78 80 83
param_type_list (114)
    on left: 84 85, on right: 75 108 109
param_list (115)
    on left: 86 87, on right: 84 85 87
param_decl (116)
    on left: 88 89 90, on right: 86 87
id_list (117)
    on left: 91 92, on right: 76 92
initializer (118)
    on left: 93 94 95, on right: 50 96 97
initializer_list (119)
    on left: 96 97, on right: 94 95 97
type_name (120)
    on left: 98 99, on right: 187 193
abstract_declarator (121)
    on left: 100 101 102, on right: 89 98 103
direct_abstract_declarator (122)
    on left: 103 104 105 106 107 108 109 110 111, on right: 101 102
    104 106 108 110
typedef_name (123)
    on left: 112, on right: 37
stat (124)
    on left: 113 114 115 116 117 118, on right: 119 120 121 128 129
    130 131 132 133 134 135 136 137 138 139 140 141 142
labeled_stat (125)
    on left: 119 120 121, on right: 113
exp_stat (126)
    on left: 122 123, on right: 114
compound_stat (127)
    on left: 124 125 126 127, on right: 5 6 7 9 115
stat_list (128)
    on left: 128 129, on right: 124 125 129
selection_stat (129)
    on left: 130 131 132, on right: 116
iteration_stat (130)
    on left: 133 134 135 136 137 138 139 140 141 142, on right: 117
jump_stat (131)
    on left: 143 144 145 146 147, on right: 118
exp (132)
    on left: 148 149, on right: 130 131 132 133 134 135 136 137 138
    139 140 141 146 149 155 201 211
assignment_exp (133)
    on left: 150 151, on right: 93 148 149 151 212 213
assignment_operator (134)
    on left: 152 153, on right: 151
conditional_exp (135)
    on left: 154 155, on right: 150 156
const_exp (136)
    on left: 156 157, on right: 59 60 67 73 104 105 120
logical_or_exp (137)
    on left: 158 159, on right: 154 155 159
logical_and_exp (138)
    on left: 160 161, on right: 158 159 161
inclusive_or_exp (139)
    on left: 162 163, on right: 160 161 163
exclusive_or_exp (140)
    on left: 164 165, on right: 162 163 165
and_exp (141)
    on left: 166 167, on right: 164 165 167
equality_exp (142)
    on left: 168 169 170, on right: 166 167 169 170
relational_exp (143)
    on left: 171 172 173 174 175, on right: 168 169 170 172 173 174
    175
shift_expression (144)
    on left: 176 177 178, on right: 171 172 173 174 175 177 178
additive_exp (145)
    on left: 179 180 181, on right: 176 177 178 180 181
mult_exp (146)
    on left: 182 183 184 185, on right: 179 180 181 183 184 185
cast_exp (147)
    on left: 186 187, on right: 182 183 184 185 187 191
unary_exp (148)
    on left: 188 189 190 191 192 193, on right: 151 186 189 190 192
unary_operator (149)
    on left: 194 195 196 197 198 199, on right: 191
postfix_exp (150)
    on left: 200 201 202 203 204 205 206 207, on right: 188 201 202
    203 204 205 206 207
primary_exp (151)
    on left: 208 209 210 211, on right: 157 200
argument_exp_list (152)
    on left: 212 213, on right: 202 213
const_type (153)
    on left: 214 215 216, on right: 209


State 0

    0 $accept: . translation_unit $end

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    MUL           shift, and go to state 20
    PARENTHESE_L  shift, and go to state 21
    IDENTITY      shift, and go to state 22

    translation_unit      go to state 23
    external_decl         go to state 24
    function_definition   go to state 25
    decl                  go to state 26
    decl_specs            go to state 27
    storage_class_spec    go to state 28
    type_spec             go to state 29
    type_qualifier        go to state 30
    struct_or_union_spec  go to state 31
    struct_or_union       go to state 32
    enum_spec             go to state 33
    declarator            go to state 34
    direct_declarator     go to state 35
    pointer               go to state 36
    typedef_name          go to state 37


State 1

   21 storage_class_spec: AUTO .

    $default  reduce using rule 21 (storage_class_spec)


State 2

   27 type_spec: CHAR .

    $default  reduce using rule 27 (type_spec)


State 3

   38 type_qualifier: CONST .

    $default  reduce using rule 38 (type_qualifier)


State 4

   32 type_spec: DOUBLE .

    $default  reduce using rule 32 (type_spec)


State 5

   61 enum_spec: ENUM . IDENTITY BRACE_L enumerator_list BRACE_R
   62          | ENUM . BRACE_L enumerator_list BRACE_R
   63          | ENUM . IDENTITY

    BRACE_L   shift, and go to state 38
    IDENTITY  shift, and go to state 39


State 6

   24 storage_class_spec: EXTERN .

    $default  reduce using rule 24 (storage_class_spec)


State 7

   31 type_spec: FLOAT .

    $default  reduce using rule 31 (type_spec)


State 8

   29 type_spec: INT .

    $default  reduce using rule 29 (type_spec)


State 9

   30 type_spec: LONG .

    $default  reduce using rule 30 (type_spec)


State 10

   22 storage_class_spec: REGISTER .

    $default  reduce using rule 22 (storage_class_spec)


State 11

   28 type_spec: SHORT .

    $default  reduce using rule 28 (type_spec)


State 12

   33 type_spec: SIGNED .

    $default  reduce using rule 33 (type_spec)


State 13

   23 storage_class_spec: STATIC .

    $default  reduce using rule 23 (storage_class_spec)


State 14

   43 struct_or_union: STRUCT .

    $default  reduce using rule 43 (struct_or_union)


State 15

   25 storage_class_spec: TYPEDEF .

    $default  reduce using rule 25 (storage_class_spec)


State 16

   44 struct_or_union: UNION .

    $default  reduce using rule 44 (struct_or_union)


State 17

   34 type_spec: UNSIGNED .

    $default  reduce using rule 34 (type_spec)


State 18

   26 type_spec: VOID .

    $default  reduce using rule 26 (type_spec)


State 19

   39 type_qualifier: VOLATILE .

    $default  reduce using rule 39 (type_qualifier)


State 20

   78 pointer: MUL . type_qualifier_list
   79        | MUL .
   80        | MUL . type_qualifier_list pointer
   81        | MUL . pointer

    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 19
    MUL       shift, and go to state 20

    $default  reduce using rule 79 (pointer)

    type_qualifier       go to state 40
    pointer              go to state 41
    type_qualifier_list  go to state 42


State 21

   72 direct_declarator: PARENTHESE_L . declarator PARENTHESE_R

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    MUL           shift, and go to state 20
    PARENTHESE_L  shift, and go to state 21
    IDENTITY      shift, and go to state 22

    decl_specs            go to state 43
    storage_class_spec    go to state 28
    type_spec             go to state 29
    type_qualifier        go to state 30
    struct_or_union_spec  go to state 31
    struct_or_union       go to state 32
    enum_spec             go to state 33
    declarator            go to state 44
    direct_declarator     go to state 35
    pointer               go to state 36
    typedef_name          go to state 37


State 22

   71 direct_declarator: IDENTITY .
  112 typedef_name: IDENTITY .

    $end          reduce using rule 71 (direct_declarator)
    $end          [reduce using rule 112 (typedef_name)]
    AUTO          reduce using rule 71 (direct_declarator)
    AUTO          [reduce using rule 112 (typedef_name)]
    CHAR          reduce using rule 71 (direct_declarator)
    CHAR          [reduce using rule 112 (typedef_name)]
    COLON         reduce using rule 71 (direct_declarator)
    COLON         [reduce using rule 112 (typedef_name)]
    CONST         reduce using rule 71 (direct_declarator)
    CONST         [reduce using rule 112 (typedef_name)]
    DOUBLE        reduce using rule 71 (direct_declarator)
    DOUBLE        [reduce using rule 112 (typedef_name)]
    ENUM          reduce using rule 71 (direct_declarator)
    ENUM          [reduce using rule 112 (typedef_name)]
    EXTERN        reduce using rule 71 (direct_declarator)
    EXTERN        [reduce using rule 112 (typedef_name)]
    FLOAT         reduce using rule 71 (direct_declarator)
    FLOAT         [reduce using rule 112 (typedef_name)]
    INT           reduce using rule 71 (direct_declarator)
    INT           [reduce using rule 112 (typedef_name)]
    LONG          reduce using rule 71 (direct_declarator)
    LONG          [reduce using rule 112 (typedef_name)]
    REGISTER      reduce using rule 71 (direct_declarator)
    REGISTER      [reduce using rule 112 (typedef_name)]
    SHORT         reduce using rule 71 (direct_declarator)
    SHORT         [reduce using rule 112 (typedef_name)]
    SIGNED        reduce using rule 71 (direct_declarator)
    SIGNED        [reduce using rule 112 (typedef_name)]
    STATIC        reduce using rule 71 (direct_declarator)
    STATIC        [reduce using rule 112 (typedef_name)]
    STRUCT        reduce using rule 71 (direct_declarator)
    STRUCT        [reduce using rule 112 (typedef_name)]
    TYPEDEF       reduce using rule 71 (direct_declarator)
    TYPEDEF       [reduce using rule 112 (typedef_name)]
    UNION         reduce using rule 71 (direct_declarator)
    UNION         [reduce using rule 112 (typedef_name)]
    UNSIGNED      reduce using rule 71 (direct_declarator)
    UNSIGNED      [reduce using rule 112 (typedef_name)]
    VOID          reduce using rule 71 (direct_declarator)
    VOID          [reduce using rule 112 (typedef_name)]
    VOLATILE      reduce using rule 71 (direct_declarator)
    VOLATILE      [reduce using rule 112 (typedef_name)]
    MUL           reduce using rule 71 (direct_declarator)
    MUL           [reduce using rule 112 (typedef_name)]
    COMMA         reduce using rule 71 (direct_declarator)
    COMMA         [reduce using rule 112 (typedef_name)]
    SEMI          reduce using rule 71 (direct_declarator)
    SEMI          [reduce using rule 112 (typedef_name)]
    PARENTHESE_L  reduce using rule 71 (direct_declarator)
    PARENTHESE_L  [reduce using rule 112 (typedef_name)]
    PARENTHESE_R  reduce using rule 71 (direct_declarator)
    PARENTHESE_R  [reduce using rule 112 (typedef_name)]
    BRACKET_L     reduce using rule 71 (direct_declarator)
    BRACKET_L     [reduce using rule 112 (typedef_name)]
    BRACE_L       reduce using rule 71 (direct_declarator)
    BRACE_L       [reduce using rule 112 (typedef_name)]
    BRACE_R       reduce using rule 71 (direct_declarator)
    BRACE_R       [reduce using rule 112 (typedef_name)]
    ASSIGN        reduce using rule 71 (direct_declarator)
    ASSIGN        [reduce using rule 112 (typedef_name)]
    IDENTITY      reduce using rule 71 (direct_declarator)
    IDENTITY      [reduce using rule 112 (typedef_name)]
    $default      reduce using rule 71 (direct_declarator)


State 23

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_decl

    $end          shift, and go to state 45
    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    MUL           shift, and go to state 20
    PARENTHESE_L  shift, and go to state 21
    IDENTITY      shift, and go to state 22

    external_decl         go to state 46
    function_definition   go to state 25
    decl                  go to state 26
    decl_specs            go to state 27
    storage_class_spec    go to state 28
    type_spec             go to state 29
    type_qualifier        go to state 30
    struct_or_union_spec  go to state 31
    struct_or_union       go to state 32
    enum_spec             go to state 33
    declarator            go to state 34
    direct_declarator     go to state 35
    pointer               go to state 36
    typedef_name          go to state 37


State 24

    1 translation_unit: external_decl .

    $default  reduce using rule 1 (translation_unit)


State 25

    3 external_decl: function_definition .

    $default  reduce using rule 3 (external_decl)


State 26

    4 external_decl: decl .

    $default  reduce using rule 4 (external_decl)


State 27

    5 function_definition: decl_specs . declarator decl_list compound_stat
    7                    | decl_specs . declarator compound_stat
    8                    | decl_specs . declarator
   10 decl: decl_specs . init_declarator_list SEMI
   11     | decl_specs . SEMI
   70 declarator: decl_specs .

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    MUL           shift, and go to state 20
    SEMI          shift, and go to state 47
    PARENTHESE_L  shift, and go to state 21
    IDENTITY      shift, and go to state 22

    AUTO      [reduce using rule 70 (declarator)]
    CHAR      [reduce using rule 70 (declarator)]
    CONST     [reduce using rule 70 (declarator)]
    DOUBLE    [reduce using rule 70 (declarator)]
    ENUM      [reduce using rule 70 (declarator)]
    EXTERN    [reduce using rule 70 (declarator)]
    FLOAT     [reduce using rule 70 (declarator)]
    INT       [reduce using rule 70 (declarator)]
    LONG      [reduce using rule 70 (declarator)]
    REGISTER  [reduce using rule 70 (declarator)]
    SHORT     [reduce using rule 70 (declarator)]
    SIGNED    [reduce using rule 70 (declarator)]
    STATIC    [reduce using rule 70 (declarator)]
    STRUCT    [reduce using rule 70 (declarator)]
    TYPEDEF   [reduce using rule 70 (declarator)]
    UNION     [reduce using rule 70 (declarator)]
    UNSIGNED  [reduce using rule 70 (declarator)]
    VOID      [reduce using rule 70 (declarator)]
    VOLATILE  [reduce using rule 70 (declarator)]
    IDENTITY  [reduce using rule 70 (declarator)]
    $default  reduce using rule 70 (declarator)

    decl_specs            go to state 43
    storage_class_spec    go to state 28
    type_spec             go to state 29
    type_qualifier        go to state 30
    struct_or_union_spec  go to state 31
    struct_or_union       go to state 32
    init_declarator_list  go to state 48
    init_declarator       go to state 49
    enum_spec             go to state 33
    declarator            go to state 50
    direct_declarator     go to state 35
    pointer               go to state 36
    typedef_name          go to state 37


State 28

   14 decl_specs: storage_class_spec . decl_specs
   15           | storage_class_spec .

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    CONST     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    ENUM      shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    REGISTER  shift, and go to state 10
    SHORT     shift, and go to state 11
    SIGNED    shift, and go to state 12
    STATIC    shift, and go to state 13
    STRUCT    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNION     shift, and go to state 16
    UNSIGNED  shift, and go to state 17
    VOID      shift, and go to state 18
    VOLATILE  shift, and go to state 19
    IDENTITY  shift, and go to state 51

    AUTO      [reduce using rule 15 (decl_specs)]
    CHAR      [reduce using rule 15 (decl_specs)]
    CONST     [reduce using rule 15 (decl_specs)]
    DOUBLE    [reduce using rule 15 (decl_specs)]
    ENUM      [reduce using rule 15 (decl_specs)]
    EXTERN    [reduce using rule 15 (decl_specs)]
    FLOAT     [reduce using rule 15 (decl_specs)]
    INT       [reduce using rule 15 (decl_specs)]
    LONG      [reduce using rule 15 (decl_specs)]
    REGISTER  [reduce using rule 15 (decl_specs)]
    SHORT     [reduce using rule 15 (decl_specs)]
    SIGNED    [reduce using rule 15 (decl_specs)]
    STATIC    [reduce using rule 15 (decl_specs)]
    STRUCT    [reduce using rule 15 (decl_specs)]
    TYPEDEF   [reduce using rule 15 (decl_specs)]
    UNION     [reduce using rule 15 (decl_specs)]
    UNSIGNED  [reduce using rule 15 (decl_specs)]
    VOID      [reduce using rule 15 (decl_specs)]
    VOLATILE  [reduce using rule 15 (decl_specs)]
    IDENTITY  [reduce using rule 15 (decl_specs)]
    $default  reduce using rule 15 (decl_specs)

    decl_specs            go to state 52
    storage_class_spec    go to state 28
    type_spec             go to state 29
    type_qualifier        go to state 30
    struct_or_union_spec  go to state 31
    struct_or_union       go to state 32
    enum_spec             go to state 33
    typedef_name          go to state 37


State 29

   16 decl_specs: type_spec . decl_specs
   17           | type_spec . direct_declarator
   18           | type_spec .
